--- a/package.json
+++ b/package.json
@@ -3,18 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dnd-kit/core": "^3.1.1",
+    "@dnd-kit/modifiers": "^3.0.0",
+    "@dnd-kit/sortable": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/react-beautiful-dnd": "^13.1.1",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.8",
+    "array-move": "^3.0.1",
     "formik": "^2.2.9",
     "formik-antd": "^2.0.1",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
+    "react-movable": "^2.5.4",
     "react-scripts": "4.0.3",
+    "react-sortable-hoc": "^2.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -43,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.14"
+    "@types/react": "^17.0.14",
+    "@types/react-beautiful-dnd": "^2.3.0"
   }
 }
